--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,7 @@ jobs:
           terraform_version: latest
 
       - name: Initialize Terraform
-        run: terraform init \
-          -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
-          -backend-config="key=${{ env.TF_STATE_KEY }}" \
-          -backend-config="region=${{ env.AWS_REGION }}" \
-          -backend-config="dynamodb_table=${{ env.TF_LOCK_TABLE }}"
+        run: terraform init 
 
       - name: Terraform Format Check
         run: terraform fmt -check
