--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,12 @@
-name: Terraform Apply & Destroy
+name: Terraform Deployment
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
-    inputs:
-      action:
-        description: 'Terraform action (apply/destroy)'
-        required: true
-        default: 'apply'
-        type: choice
-        options:
-          - apply
-          - destroy
-
-env:
-  AWS_REGION: ap-south-1
-  TF_STATE_BUCKET: terraform-state-bucket-unique-name
-  TF_STATE_KEY: terraform.tfstate
-  TF_LOCK_TABLE: terraform-locks
-
-permissions:
-  contents: read
 
 jobs:
-  terraform:
-    name: Terraform Apply/Destroy
+  setup-infra:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,31 +14,52 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+        run: |
+          echo "[default]" > ~/.aws/credentials
+          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: latest
 
-      - name: Initialize Terraform
-        run: terraform init 
+      - name: Initialize Terraform (Local Backend)
+        run: terraform init
 
+      - name: Apply Terraform to Create S3 & DynamoDB
+        run: terraform apply -auto-approve
 
-      - name: Terraform Validate
-        run: terraform validate
+  store-state:
+    needs: setup-infra
+    runs-on: ubuntu-latest
 
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Terraform Apply
-        if: github.event.inputs.action == 'apply' || github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
+      - name: Configure AWS Credentials
+        run: |
+          echo "[default]" > ~/.aws/credentials
+          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
 
-      - name: Terraform Destroy (Manual Trigger Only)
-        if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve
+      - name: Update Terraform Backend to Use S3
+        run: |
+          cat > backend.tf <<EOF
+          terraform {
+            backend "s3" {
+              bucket         = "terraform-state-bucket-unique-name"
+              key            = "terraform.tfstate"
+              region         = "ap-south-1"
+              dynamodb_table = "terraform-locks"
+              encrypt        = true
+            }
+          }
+          EOF
+
+      - name: Reinitialize Terraform with S3 Backend
+        run: terraform init -force-copy
+
+      - name: Apply Terraform to Store State in S3
+        run: terraform apply -auto-approve
