--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         working-directory: base-infra
         run: | 
            terraform apply -auto-approve
-           aws s3 cp terraform.tfstate s3://terraform-state-bucket-unique-name123/terraform.tfstate
+           #aws s3 cp terraform.tfstate s3://terraform-state-bucket-unique-name123/terraform.tfstate
 
   main-infra:
     name: Deploy Main Infrastructure
