--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -23,8 +23,9 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.ECR_URL }}:$IMAGE_TAG .
-          docker push ${{ secrets.ECR_URL }}:$IMAGE_TAG
+          cd app
+          docker build -t ${{ secrets.ECR_URL }}:latest .
+          docker push ${{ secrets.ECR_URL }}:latest
 
       #- name: Deploy to AWS Lambda
       #  run: |
