--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,7 +18,8 @@ jobs:
           aws-region: ap-south-1
 
       - name: Login to Amazon ECR
-        run: |
+        run: | 
+          aws s3 cp app/ s3://my-public-bucket-unique-name456/ --recursive --exclude "*" --include "*.html"
           aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_URL }}
 
       - name: Build and Push Docker Image
